--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,7 @@ __pycache__/
 
 *.log
 
-*/tf_files/bottlenecks/*
-*/tf_files/food/*
-*/tf_files/models/*
-*/tf_files/training_sumarries/*
-*/datasets/
-*/datasets_test/
+**/tf_files/bottlenecks/*
+**/tf_files/food/*
+**/tf_files/models/*
+**/tf_files/training_summaries/*
