add graph and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 *./py[cod]
 *$py.class
-__pycache__/
+**/__pycache__/
 
 *.log
 
@@ -13,3 +13,4 @@ __pycache__/
 **/tf_files/food/*
 **/tf_files/models/*
 **/tf_files/training_summaries/*
+**/tensorflow/datasets/*
